# runpod-automation

./: .gitignore  .pre-commit-config.yaml  README.md  SDK_CLI_MAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/rpctl/: __init__.py  errors.py  main.py
src/rpctl/api/: graphql_client.py  queries.py  rest_client.py  retry.py
src/rpctl/cli/: capacity.py  config.py  endpoint.py  pod.py  preset.py  registry.py  ssh.py  template.py  user.py  volume.py
src/rpctl/config/: constants.py  profiles.py  settings.py
src/rpctl/models/: capacity.py  endpoint.py  pod.py  preset.py  template.py  volume.py
tests/: conftest.py
tests/fixtures/: datacenters.json  gpu_types.json
tests/integration/: test_cli_capacity.py  test_cli_config.py  test_cli_config_preset.py  test_cli_full_coverage.py  test_cli_main.py  test_cli_phase2.py  test_cli_preset.py
tests/unit/: test_capacity_cpus.py  test_capacity_service.py  test_config.py  test_coverage_cli_registry.py  test_coverage_cli_template.py  test_coverage_cli_user.py  test_coverage_gaps.py  test_coverage_tables.py  test_dry_run.py  test_endpoint_health.py  test_endpoint_jobs.py  test_endpoint_run.py  test_endpoint_stream.py  test_graphql_client.py  test_models.py  test_models_phase2.py  test_output.py  test_output_formats.py  test_parallel.py  test_pod_bulk_ops.py  test_pod_wait.py  test_poll.py  test_preset_model.py  test_preset_service.py  test_registry.py  test_registry_list.py  test_rest_client.py  test_rest_client_endpoints.py  test_retry.py  test_services.py  test_ssh.py  test_user.py
(+15 files in other folders)
