[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpctl"
version = "0.1.0"
description = "CLI tool for managing RunPod serverless endpoints, pods, volumes, and capacity planning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.9",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "runpod>=1.7.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
rpctl = "rpctl.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rpctl"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/rpctl/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["runpod.*", "keyring.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=rpctl --cov-report=term-missing"
